--- a/dai.html
+++ b/dai.html
@@ -26,7 +26,7 @@
             <p>Los diálogos sufrieron un downgrade. No sé por qué, pero nunca logré sentir al Inquisidor como propio.</p>
             <p>Por otro lado, me encantan los compañeros de esta entrega. Yo creo que BioWare no decepcionó en este aspecto. El único que me parece un poco flojo es Varric, que pasó de ser tu mejor amigo en el 2 a… nada. Yo creo que lo metieron solo para conectar las dos historias.</p>
             <p>Pero la falla más grande es el villano: Corypheus… ¿quién es Corypheus? No tiene ni un brillo. Llega a su peak es In Your Heart Shall Burn, después vale c*******.</p>
-            <p>Cuando llegué al final ya no me importaba nada y I cheesed it con Sera y lo maté en un segundo (en Hard).</p>
+            <p>Cuando llegué al final ya no me importaba nada so I cheesed it con Sera y lo maté en un segundo (en Hard).</p>
             <p>En fin, yo se lo recomendaría a quienes son fan de BioWare o quieren una historia decente y están dispuestos a ignorar los contratiempos que tiene el juego.</p>
             <p>→ <a href="https://store.steampowered.com/app/1222690/Dragon_Age_Inquisition/" target="_blank">Steam</a> / <a href="https://www.origin.com/chl/es-es/store/dragon-age/dragon-age-inquisition" target="_blank">Origin</a> / <a href="https://store.playstation.com/es-cl/product/UP0006-CUSA00220_00-DA3GAMEOFTHEYEAR/" target="_blank">PlayStation Store</a> / <a href="https://www.microsoft.com/es-cl/p/dragon-age-inquisition/c47gzzbmr5wg" target="_blank">Microsoft Store</a></p>
             <section class="dai-galeria">
